testsuite/tests/partial-sigs/should_fail/WildcardsInPatternAndExprSig.hs
{-# LANGUAGE NamedWildcards, ScopedTypeVariables #-}
module WildcardsInPatternAndExprSig where

bar (Just ([x :: _a] :: _) :: Maybe [_a]) (z :: _a) = [x, z] :: [_a]

